--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/router": "^16.2.0",
     "@types/jsonwebtoken": "^9.0.4",
     "angular-jwt": "^0.1.11",
+    "chart.js": "^4.4.0",
     "http": "^0.0.1-security",
     "httpclient": "^0.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    "ng2-charts": "^5.0.3",
     "pdfjs-dist": "^3.11.174",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
